--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,9 @@ matrix:
   - go: 1.8
     env:
     - TESTS=true
+  - go: 1.9
+    env:
+    - TESTS=true
   - go: 1.7
     env:
     - ALL_IN_ONE=true
